# mse-gl-hw1-fractal

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh
src/App/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MandelbrotWidget.cpp  MandelbrotWidget.h  MandelbrotWindow.cpp  MandelbrotWindow.h  SettingsWindow.cpp  SettingsWindow.h  main.cpp
src/App/Shaders/: diffuse.vs  mandelbrot.fs  mandelbrot.vs
